--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -39,8 +39,8 @@ services:
     container_name: vue-app
     ports:
       - "5173:5173"
-    # depends_on:
-    #   - backend
+    depends_on:
+      - backend
     volumes:
       - ./frontend:/app
 
