--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "axios": "^1.8.2",
+    "date-fns": "^4.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
