--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,10 +1,12 @@
-FROM python:3.9-slim
+FROM python:3.13-alpine3.21
 
 WORKDIR /app
+
+ENV PYTHONUNBUFFERED=1
 
 COPY ./backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY ./backend .
 
-CMD ["python", "app.py"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
