--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,9 +1,11 @@
-FROM node:18-slim
+FROM node:18-alpine
 
 WORKDIR /app
 
-COPY ./frontend .
+COPY ./frontend/package.json .
 
 RUN npm install
+
+COPY ./frontend .
 
 CMD ["npm", "run", "dev"]
