--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,20 +12,30 @@ httpcore==1.0.8
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+mongomock==4.3.0
+mongomock-motor==0.0.35
 motor==3.7.0
+packaging==25.0
+pluggy==1.5.0
 pydantic==2.11.3
 pydantic_core==2.33.1
 Pygments==2.19.1
 pymongo==4.12.0
+pytest==8.3.5
+pytest-asyncio==0.26.0
+pytest-mock==3.14.0
 python-dotenv==1.1.0
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 rich==14.0.0
 rich-toolkit==0.14.1
+sentinels==1.0.0
 shellingham==1.5.4
 sniffio==1.3.1
 starlette==0.46.2
